--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "parksweb.new",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "name": "parksim",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/PARKSystemsCorporation/cursorparks.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/PARKSystemsCorporation/cursorparks/issues"
-  },
-  "homepage": "https://github.com/PARKSystemsCorporation/cursorparks#readme",
   "dependencies": {
-    "better-sqlite3": "^12.6.2",
-    "express": "^5.2.1"
+    "dexie": "^4.0.8",
+    "next": "^15.2.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.30",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.2.0",
+    "eslint-config-next": "^15.2.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
