--- a/package.json
+++ b/package.json
@@ -13,14 +13,23 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
+    "@react-three/cannon": "^6.6.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@types/three": "^0.182.0",
     "bcryptjs": "^3.0.3",
+    "better-sqlite3": "^12.6.2",
+    "cannon-es": "^0.20.0",
     "dexie": "^4.0.8",
+    "gsap": "^3.14.2",
     "next": "^15.2.3",
     "prisma": "^6.19.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "socket.io": "^4.8.3",
-    "socket.io-client": "^4.8.3"
+    "socket.io-client": "^4.8.3",
+    "three": "^0.182.0",
+    "troika-three-text": "^0.52.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
