--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@types/three": "^0.182.0",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.6.2",
     "cannon-es": "^0.20.0",
     "dexie": "^4.0.8",
     "gsap": "^3.14.2",
+    "lamina": "^1.2.2",
     "next": "^15.2.3",
     "prisma": "^6.19.2",
     "react": "^19.0.0",
