--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-three/fiber": "^9.5.0",
     "@react-three/postprocessing": "^3.0.4",
     "@types/three": "^0.182.0",
+    "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.6.2",
     "cannon-es": "^0.20.0",
@@ -34,7 +35,8 @@
     "socket.io-client": "^4.8.3",
     "three": "^0.182.0",
     "three-stdlib": "^2.36.1",
-    "troika-three-text": "^0.52.4"
+    "troika-three-text": "^0.52.4",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
